--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title_bottom: Haitao Shang
 email: hshang@utep.edu
 description: Shang Research Group
 baseurl: ""
-url: "https://shang-research.github.io"
+url: "https://Shang-Research.github.io"
 
 # theme: minimal-mistakes-jekyll
 # minimal_mistakes_skin: "aqua"
