verify index.md content

--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -16,8 +16,7 @@
   
   education:
     [
-      # "2024-, Assistant Professor, The University of Texas at El Paso",
-      # "2021-2024, Postdoc, Institute of Ecology and Evolution, University of Oregon",
-      "2015-2021, Ph.D. in Earth, Atmospheric and Planetary Sciences, Massachusetts Institute of Technology",
-      "2011-2015, B.S. in Mathematics & Physics & Geological Sciences, University of Minnesota",
+      "Ph.D. in Earth, Atmospheric and Planetary Sciences, Massachusetts Institute of Technology",
+      "M.S. in Data Science, Harvard University",
+      "B.S. in Mathematics & Physics & Geological Sciences, University of Minnesota",
     ]
