--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Shang Research Group
+title: Haitao Shang
 title_bottom: Haitao Shang
 email: hshang@utep.edu
 description: Shang Research Group
@@ -32,7 +32,7 @@ url: "https://Shang-Research.github.io"
 # Pages shown in navbar
 nav_pages:
   #- name: Members
-  - name: People
+  #- name: People
   #- name: Research
   - name: Publications
   #- name: Teaching
