--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -18,5 +18,5 @@
     [
       "Ph.D. in Earth, Atmospheric and Planetary Sciences, Massachusetts Institute of Technology",
       "M.S. in Data Science, Harvard University",
-      "B.S. in Mathematics & Physics & Geological Sciences, University of Minnesota",
+      "B.S. in Geological Sciences $\&$ Mathematics $\&$ Physics, University of Minnesota",
     ]
